ブラウザをeclipseのウィンドウ内で開ける様にした。併せて、ツールバーの使用可不可に関する処理を改善。
git-svn-id: https://www.seasar.org/svn/sandbox/weblauncher/trunk@30 8523766c-5c40-478b-b397-97bd31507e9a

--- a/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages.properties
+++ b/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages.properties
@@ -21,6 +21,7 @@ LABEL_WEB_PORTNO=WebPortNo
 LABEL_CONTEXT_NAME=Context Name
 LABEL_CONFIG=<a>Config File</a>
 LABEL_CHECK_SERVER=Check Server When Open Url
+LABEL_USE_INTERNAL_WEBBROWSER=Open Browser in eclipse window.
 ERR_ONLY_NUMERIC={0} is Only Use Numeric.
 MSG_START_SERVER=Start Server ....
 MSG_CONNECT_SERVER=Connect to Server ...
