--- a/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages_ja.properties
+++ b/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages_ja.properties
@@ -21,6 +21,7 @@ LABEL_WEB_PORTNO=\u30dd\u30fc\u30c8\u756a\u53f7
 LABEL_CONTEXT_NAME=\u30b3\u30f3\u30c6\u30ad\u30b9\u30c8\u540d
 LABEL_CONFIG=<a>\u8a2d\u5b9a\u30d5\u30a1\u30a4\u30eb</a>
 LABEL_CHECK_SERVER=\u30b5\u30fc\u30d0\u304c\u52d5\u4f5c\u3057\u3066\u3044\u308b\u304b\u30c1\u30a7\u30c3\u30af\u3059\u308b\u3002
+LABEL_USE_INTERNAL_WEBBROWSER=eclipse \u30a6\u30a3\u30f3\u30c9\u30a6\u5185\u3067HTML\u3092\u958b\u304f
 ERR_ONLY_NUMERIC={0} \u306f\u3001\u6570\u5b57\u306e\u307f\u5165\u529b\u53ef\u80fd\u3067\u3059\u3002
 MSG_START_SERVER=\u30b5\u30fc\u30d0\u3092\u8d77\u52d5\u4e2d ....
 MSG_CONNECT_SERVER=\u30b5\u30fc\u30d0\u306b\u63a5\u7d9a\u958b\u59cb ...
