git-svn-id: https://www.seasar.org/svn/sandbox/weblauncher/trunk@37 8523766c-5c40-478b-b397-97bd31507e9a

--- a/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages.properties
+++ b/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages.properties
@@ -30,3 +30,5 @@ MSG_OPEN_URL=Open {0} ...
 TOOLTIP_CHECK_SERVER=Check server status when view on server.
 TOOLTIP_IS_LITE=Run Winstone with Lite mode.
 URL_WINSTONE=http://winstone.sourceforge.net/
+LABEL_START=Start Web Server
+LABEL_STOP=Stop Web Server
