--- a/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages_ja.properties
+++ b/org.seasar.weblauncher/src/main/resouces/org/seasar/weblauncher/nls/Messages_ja.properties
@@ -30,3 +30,5 @@ MSG_OPEN_URL={0} \u3092\u958b\u304d\u307e\u3059...
 TOOLTIP_CHECK_SERVER=\u30c1\u30a7\u30c3\u30af\u3092ON\u306b\u3059\u308b\u3068\u3001\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30ea\u30bd\u30fc\u30b9\u3092\u30d6\u30e9\u30a6\u30b6\u3067\u958b\u304f\u6642\u3001\u5fc5\u8981\u306a\u3089\u30b5\u30fc\u30d0\u3092\u8d77\u52d5\u3057\u307e\u3059\u3002
 TOOLTIP_IS_LITE=Winstone\u3092Lite\u30e2\u30fc\u30c9\u3067\u8d77\u52d5\u3059\u308b\u3068\u3001\u5e7e\u3064\u304b\u306e\u6a5f\u80fd\u5236\u9650\u304c\u3042\u308a\u307e\u3059\u304c\u3001\u305d\u306e\u4ee3\u308f\u308a\u9ad8\u901f\u306b\u52d5\u4f5c\u3057\u307e\u3059\u3002
 URL_WINSTONE=http://winstone.sourceforge.net/
+LABEL_START=\u30b5\u30fc\u30d0\u3092\u8d77\u52d5\u3059\u308b
+LABEL_STOP=\u30b5\u30fc\u30d0\u3092\u505c\u6b62\u3059\u308b
